syntax = "proto3";

package s2s;

option go_package = "github.com/godyy/ggs/internal/core/proto/pb/s2s";

// 错误码.
enum ErrCode {
    ECSuccess = 0; // 成功.
    ECInternalError = 1; // 内部错误.
}
